# ChangeLog for sys-apps/baselayout
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.470 2008/08/19 17:51:19 zmedico Exp $

  26 Jan 2009; Daniel Robbins <drobbins@funtoo.org> baselayout-2.0.0-r1.ebuild:
  No rev-bump, but now also generate device nodes when ROOT != "/", not just
  when "build" is in USE. This is what Metro needs for "stage3-quick" merges.

  20 Nov 2008; Daniel Robbins <drobbins@funtoo.org> baselayout-1.12.11.1.ebuild:
  added a PROVIDE="virtual/baselayout" to the ebuild as I'm adding back that
  virtual to help sort through the OpenRC transition and help to ensure that
  OpenRC gets merged when there is a new version available. Both the classic
  baselayout and the new OpenRC should provide virtual/baselayout.

  04 Sep 2008; Daniel Robbins <drobbins@funtoo.org> baselayout-2.0.0-r1.ebuild:
  New baselayout ebuild that actually creates device nodes. This has been
  missing from the ebuild, so I added it from a 1.x version and added MAKEDEV
  to the portage tree for a quick fix.

  19 Aug 2008; Zac Medico <zmedico@gentoo.org> baselayout-2.0.0.ebuild:
  Avoid potential warning messages in the SYMLINK_LIB code which may be
  triggered when find traverses a directory whose parent has already been
  merged from lib to lib64.

  19 Aug 2008; Zac Medico <zmedico@gentoo.org> baselayout-2.0.0.ebuild:
  Make the SYMLINK_LIB code in pkg_preinst merge files from lib directories
  to lib64 directories when necessary, instead of blindly wiping out the
  content of the lib dir. Thanks to Daniel Robbins for finding the cause of
  this issue, which he discovered when building stage1 with catalyst.

  10 May 2008; Mike Frysinger <vapier@gentoo.org> baselayout-2.0.0.ebuild:
  Install the Makefile into $D so that we can use it in pkg_preinst steps (for
  binpkgs) #218877 by Kevin Cody Jr.

  19 Apr 2008; Mike Frysinger <vapier@gentoo.org> baselayout-2.0.0.ebuild: