@@ -9,7 +9,7 @@ DIST rc-scripts-1.6.15.tar.bz2 161524 RMD160 f69c3d5a9e742bf7b7c997d49d443617779
 EBUILD baselayout-1.11.15-r3.ebuild 18810 RMD160 70a6adf906ecc25c47084b99d10bd2885da5c4fc SHA1 fd25e055fc06493f265f193e92bbcb02c8809f0a SHA256 7121667401fd361ea636880fd3d29dcb876aff313f14f298e1da4bb8d8ff7660
 EBUILD baselayout-1.12.11.1.ebuild 19459 RMD160 0a3e39885c343915dcec89b9c0af9f2fec34a722 SHA1 df5d3b7fe54a4956d5eb2eb4cd01a1552fdf5daf SHA256 856c756f6d3dffb2a2faea513dc0d8e3d422e36c6d7f1f3b0c06958d5244ac01
 EBUILD baselayout-1.12.12.ebuild 19417 RMD160 07c5ad50dc02dde2806f2eeed0c165055ca76048 SHA1 08690a566a6b2e13c05254758d75e24f297d2e0f SHA256 fc74698d50dfd8eb3679137b68bada1d3d9c01acec46473e31f92b4d16e5febe
-EBUILD baselayout-2.0.0-r1.ebuild 8580 RMD160 22aa8995e806a9d8ebf9d3600f07a722b317fac6 SHA1 a4a3bcab2339185ce5bc889b09b742435ec1f9d2 SHA256 4143fe69066bbbb922d90d60646161c4333cea2fb2d55eece9f87342a2cb3674
+EBUILD baselayout-2.0.0-r1.ebuild 10625 RMD160 395f69cfdf0baf7c835d2f56529194d9ffd5c4d8 SHA1 00398ecdc32a00ea4fe54e56b1fa6927a1aff17d SHA256 f547b7483b6055509eaab603908b2da5cdc2db07ee8e4f2f23042993d0f7aae1
 EBUILD baselayout-2.0.0.ebuild 7188 RMD160 06f6b52c63e424a420c857b9fd835a6c11acfe82 SHA1 a0c8c8fb3ccc32ffaaa760186dd174d317c3ef8f SHA256 cf8ad7041bb21c9fc6f79d81f3d9f39c1f63f46b6bcea97dc86c597eaf3106c0
-MISC ChangeLog 102838 RMD160 4b66d5e6b3d3fc5c682b3074bb4825234cf83fca SHA1 0636c0b955bdca4f105683b65df4246e89315ae2 SHA256 1657233216ffea0fd0ba73adc401ae9b3dfa6586b7de820b6602d6ff82f39c45
+MISC ChangeLog 103085 RMD160 30589fd1d9c7c6facd287ccc09b5bd795a80e2eb SHA1 6094971c4c1ae78f1be610007537470acd2ff180 SHA256 05cf4a6ef3b507cd5c3509c90cfc8e073f810cef162a7b423eddd2513c63b11b
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
